crates/cli/tests/snapshots/templates_test__templates__many_templates.snap
---
source: crates/cli/tests/templates_test.rs
expression: assert.output()
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Template               Title                  Location                                  Variables                                 Description       │
│────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│configs                Template title         templates/configs                                                                   Some description  │
│                                                                                                                                  of the template   │
│                                                                                                                                  and its files.    │
│dest                   Template title         templates/dest                            name                                      Some description  │
│                                                                                                                                  of the template   │
│                                                                                                                                  and its files.    │
│extends                Template title         templates/extends                         name                                      Some description  │
│                                                                                                                                  of the template   │
│                                                                                                                                  and its files.    │
│extends-one            Template title         templates/extends-one                     one                                       Some description  │
│                                                                                                                                  of the template   │
│                                                                                                                                  and its files.    │
│extends-two            Template title         templates/extends-two                     two                                       Some description  │
│                                                                                                                                  of the template   │
│                                                                                                                                  and its files.    │
│extensions             Template title         templates/extensions                      name                                      Some description  │
│                                                                                                                                  of the template   │
│                                                                                                                                  and its files.    │
│frontmatter            Frontmatter            templates/frontmatter                                                               Testing           │
│                                                                                                                                  frontmatter in    │
│                                                                                                                                  template files.   │
│standard               Template title         templates/standard                                                                  Some description  │
│                                                                                                                                  of the template   │
│                                                                                                                                  and its files.    │
│vars                   Variable testing       templates/vars                            array, arrayNotEmpty, arrayReq,           A template for    │
│                                                                                        arrayReqNotEmpty, boolFalse, boolTrue,    testing all       │
│                                                                                        enum, enumNotEmpty, internal, multenum,   variable config   │
│                                                                                        multenumNotEmpty, noPrompt, number,       combinations.     │
│                                                                                        numberNotEmpty, numberReq,                                  │
│                                                                                        numberReqNotEmpty, object,                                  │
│                                                                                        objectNotEmpty, objectReq,                                  │
│                                                                                        objectReqNotEmpty, string,                                  │
│                                                                                        stringNotEmpty, stringReq,                                  │
│                                                                                        stringReqNotEmpty                                           │
│vars-collections       Variable testing       templates/vars-collections                array, object                             A template for    │
│                                                                                                                                  testing collection│
│                                                                                                                                  variables.        │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
