crates/cli/tests/snapshots/templates_test__templates__no_templates.snap
---
source: crates/cli/tests/templates_test.rs
expression: assert.output()
---
│ CAUTION
│ No templates located. Configure them with the generator.templates setting.
