crates/cli/tests/snapshots/templates_test__templates__no_templates_with_filter.snap
---
source: crates/cli/tests/templates_test.rs
expression: assert.output()
---
│ CAUTION
│ There are no templates that match the filter unknown
